--- a/views/login/userProfile.ejs
+++ b/views/login/userProfile.ejs
@@ -95,7 +95,7 @@
                     <form id="userUpdateBasicInfoForm" class="form-signin" method="post" style="padding-top: 2%">
 
                         <div class="form-group" style="padding-bottom: 1%">
-                            <label class="control-label col-xs-4" for="email">Email</label>
+                            <label class="control-label col-xs-4" for="email">Email:</label>
                             <div class="input-group col-xs-6"  >
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-envelope"></span>
@@ -105,7 +105,7 @@
                         </div>
 
                         <div class="form-group" style="padding-bottom: 1%">
-                            <label class="control-label col-xs-4" for="firstName">First Name</label>
+                            <label class="control-label col-xs-4" for="firstName">First Name:</label>
                             <div class="input-group col-xs-6"  >
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-user"></span>
@@ -114,7 +114,7 @@
                             </div>
                         </div>
                         <div class="form-group" style="padding-bottom: 1%">
-                            <label class="control-label col-xs-4" for="lastName">Last Name</label>
+                            <label class="control-label col-xs-4" for="lastName">Last Name:</label>
                             <div class="input-group col-xs-6"  >
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-user"></span>
@@ -148,7 +148,7 @@
                 <form id="userUpdatePasswordForm" class="" method="post" style="padding-top: 2%">
 
                     <div class="form-group" style="padding-bottom: 1%">
-                        <label class="control-label col-xs-4" for="oldPassword">Old Password</label>
+                        <label class="control-label col-xs-4" for="oldPassword">Old Password:</label>
                         <div class="input-group col-xs-6" >
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-lock"></span>
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                     <div class="form-group" style="padding-bottom: 1%">
-                        <label class="control-label col-xs-4" for="newPassword">New Password</label>
+                        <label class="control-label col-xs-4" for="newPassword">New Password:</label>
 
                         <div class="input-group col-xs-6">
                                 <span class="input-group-addon">
@@ -167,7 +167,7 @@
                         </div>
                     </div>
                     <div class="form-group" style="padding-bottom: 1%">
-                        <label class="control-label col-xs-4" for="confirmPassword">Confirm Password</label>
+                        <label class="control-label col-xs-4" for="confirmPassword">Confirm Password:</label>
 
                         <div class="input-group col-xs-6">
                                 <span class="input-group-addon">
@@ -193,7 +193,7 @@
                     </div>
                     <% } else { %>
                     <div id="updateEmailSuccessMessage" class="form-group" style="padding-bottom: 1%; display : none">
-                        <p style="margin-top: 0px; float: left;color: green;font-style:italic">You've sucessfully updated your email.</p><br>
+                        <p style="margin-top: 0px; float: left;color: green;font-style:italic">You've successfully updated your email.</p><br>
                     </div>
                     <div id="updateEmailFailMessage" class="form-group" style="padding-bottom: 1%; display : none">
                         <p style="margin-top: 0px; float: left;color: red; font-style: italic">Update email failed. Please try it again.</p><br>
@@ -202,7 +202,7 @@
                     <form id="userUpdateEmailForm" class="" method="post" style="padding-top: 2%">
 
                         <div class="form-group" style="padding-bottom: 1%">
-                            <label class="control-label col-xs-4" for="email">New Email</label>
+                            <label class="control-label col-xs-4" for="email">New Email: </label>
                             <div class="input-group col-xs-6"  >
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-envelope"></span>
@@ -211,7 +211,7 @@
                             </div>
                         </div>
                         <div class="form-group" style="padding-bottom: 1%">
-                            <label class="control-label col-xs-4" for="updateEmailPassword">Password</label>
+                            <label class="control-label col-xs-4" for="updateEmailPassword">Password: </label>
 
                             <div class="input-group col-xs-6">
                                 <span class="input-group-addon">
