--- a/views/charity/listCharities.ejs
+++ b/views/charity/listCharities.ejs
@@ -13,7 +13,7 @@
     <%include ../layout/navbar.ejs%>
 </head>
 <body>
-<div class="container sidebar-content" style="height:auto; min-height: 90%; ">
+<div class="container sidebar-content" style="height:auto; min-height: 90%; margin-top: 20px; ">
     <div class="row row-offcanvas row-offcanvas-left">
 
         <!-- sidebar -->
