--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,7 @@
                 }
     </style>
     <%activeMenu = "Home"%>
-    <%include layout/navbar.ejs%>
+
 </head>
 
 
@@ -57,7 +57,11 @@
 <!-- attach JavaScripts -->
 <!-- navigation panel -->
 
+<div style="display: block">
+    <%include layout/navbar.ejs%>
 
+
+</div>
 
 <!-- first section - Home -->
 <div id="home" class="home">
