--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -27,7 +27,7 @@ html, body {
 
 /* additional sections */
 #home {
-    background: url(/images/homeNew.jpg) no-repeat center center fixed;
+    background: url(/images/homeNew.jpg) no-repeat center center ;
     display: table;
     height: 100%;
     position: relative;
@@ -36,6 +36,7 @@ html, body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    margin-top: 56px;
 }
 
 .glyphicon-cloud,.glyphicon-leaf,.glyphicon-phone-alt,.glyphicon-bullhorn{
