--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,4 +1,4 @@
-﻿<footer style="background:#f5f5f5;">
+﻿<footer style="background:#f5f5f5;padding-top: 10px">
     <style>
         ul {
             display: block;
@@ -57,6 +57,7 @@
                         <li><a href="/login/signin">Log In</a></li>
                         <li><a href="/charities/listCharities">List of Charities</a></li>
                         <li><a href="/campaign/listCampaigns">List of Campaigns</a></li>
+                        <li class="#"><a href="/search">Donation Tracking</a></li>
                     </ul>
                 </div>
                 <div style="float: right"> <img src="/images/footerLogo.png"/></div>
