--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -7,10 +7,11 @@
         footer a{
             color: white;
             text-decoration: none;
+
         }
         footer a:hover {
 
-            color: white;
+            color: #99CC01;
         }
 
         footer .col-md-3 {
