--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -22,6 +22,12 @@
     .navbar-nav  li  a{
 
         padding-top: 10%;
+
+    }
+
+    .navbar-nav  li a:hover{
+
+        color: #99CC01
     }
 </style>
     <div class="container-fluid" style="background: #ffffff">
@@ -110,6 +116,7 @@
             </ul>
             <% } else if( 'recipient' != user.provider ){ %>
             <ul class="nav navbar-nav navbar-right"  style="padding-right:15px;padding-top: 0px ! important">
+                <li ><a href="/charities/listCharities" style="padding-top:15px; color:black;">Charities</a></li>
                 <li class="dropdown">
                     <a href="" data-toggle="dropdown" class="dropdown-toggle">
                         <img src="<%=user.imageIconUrl%>" height="25" width="25"/>
