--- a/views/Privacy.ejs
+++ b/views/Privacy.ejs
@@ -17,7 +17,7 @@
     <%include layout/navbar.ejs%>
 </head>
 <body>
-<div class="container">
+<div class="container" style="padding-top: 5%">
 <div id="1"><h1>Privacy Policy</h1></div>    
 <div id="2">
 <p>This Privacy Policy governs the manner in which WillGive LLC collects, uses, maintains and discloses information collected from users of this Web site and WillGive mobile app(each, a "User").<br />
