--- a/views/charity/searchCharities.ejs
+++ b/views/charity/searchCharities.ejs
@@ -15,7 +15,7 @@
 <body>
 <% if(undefined == typeof keyword || !keyword) {keyword=""}%>
 
-<div class="container sidebar-content" style="height:auto; min-height: 90%; ">
+<div class="container sidebar-content" style="height:auto; min-height: 90%; padding-top: 7%">
     <div class="row row-offcanvas row-offcanvas-left">
 
         <!-- sidebar -->
