--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
         <%include layout/navbar.ejs%>
     </head>
-    <body>
+    <body style="padding-top: 5%">
         <div class="container">
             <div class="col-md-12" style="padding-top: 50px">
                 <div id ="conf" style="background:#66CDAA ;width:80%; margin:0 auto;height:500px;color:#fff;"></div>
