--- a/views/contactUs.ejs
+++ b/views/contactUs.ejs
@@ -17,7 +17,7 @@
     <%include layout/navbar.ejs%>
 </head>
 <body>
-<div class="container">
+<div class="container" style="padding-top: 5%">
     <div class="col-md-7 columns">
 
 
