--- a/views/Terms.ejs
+++ b/views/Terms.ejs
@@ -17,7 +17,7 @@
     <%include layout/navbar.ejs%>
 </head>
 <body>
-<div class="container">
+<div class="container" style="padding-top: 5%">
 <p>Please review our Terms of Service below:
 <br />
 <br />
