--- a/views/login/signin.ejs
+++ b/views/login/signin.ejs
@@ -11,7 +11,7 @@
 <body>
     <%activeMenu = "SignIn"%>
     <%include ../layout/navbar.ejs%>
-<div class="container" style="height:auto; min-height: 90%; margin: 0 auto -80px;">
+<div class="container" style="height:auto; min-height: 90%; margin: 0 auto -80px; padding-top: 5%">
     <h2 class="form-signin-heading text-center">WillGive Sign In</h2>
     <hr align="left" width="100%" background="0xff0000">
     <form id="userSignInForm" class="form-signin col-xs-4 col-xs-offset-1" action="/services/login/signin" method="post" style="padding-top: 10px">
