--- a/views/login/signup.ejs
+++ b/views/login/signup.ejs
@@ -12,7 +12,7 @@
 <body style="background:url('/images/background1.jpg') no-repeat -10px 0px">
     <%activeMenu = "SignUp"%>
     <%include ../layout/navbar.ejs%>
-<div class="container" style="min-height: 70%">
+<div class="container" style="min-height: 70%; padding-top: 5%">
     <h2 class="form-signin-heading text-center">Join WillGive</h2>
     <hr align="left" width="100%" background="0xff0000">
     <form id="userSignupForm" class="form-signin col-xs-4 col-xs-offset-1"  method="post" style="padding-top: 2%">
