change color style to light green

--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -13,6 +13,7 @@
       <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
       <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
       <link rel="stylesheet" href="/assets/css/simplePagination.css" >
+      <link rel="stylesheet" href="/assets/css/colorStyle.css" >
 
       <style>
           body{
@@ -263,7 +264,7 @@
 
                 <!-- contribute button-->
                 <!-- Button trigger modal -->
-                <button style="font-size: 24px" type="contribute_button" onClick="checkExistingPaymentMethod()" class="btn btn-block btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                <button style="font-size: 24px" type="contribute_button" onClick="checkExistingPaymentMethod()" class="btn btn-block btn-primary btn-lg greenButton" data-toggle="modal" data-target="#myModal">
                     CONTRIBUTE
                 </button>
                 <hr/>
@@ -276,9 +277,8 @@
                     <h4>Contributions</h4>
                     <div id="transactionHistory">
 
-                    </div><hr/>
+                    </div>
                     <div id="botPage" style="float: left"></div>
-                    <hr/>
 
                 </div>
                 <hr/>
