--- a/views/login/signup.ejs
+++ b/views/login/signup.ejs
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/assets/css/social-buttons.css">
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
+    <link rel="stylesheet" href="/assets/css/colorStyle.css" >
+
 </head>
 <body style="background:url('/images/background1.jpg') no-repeat -10px 0px">
     <%activeMenu = "SignUp"%>
@@ -54,7 +56,7 @@
             <input type="password" id="signupPasswordConfirm" name="signupPasswordConfirm" class="form-control" placeholder="Confirm Password" equalTo="#signupPassword" minlength="8" required>
         </div>
         <div style="padding-bottom: 1%"> &nbsp;</div>
-        <button id="submitSignupFormButton" class="btn btn-lg btn-primary btn-block" type="submit" >Join WillGive</button>
+        <button id="submitSignupFormButton" class="btn btn-lg btn-primary btn-block greenButton" type="submit" >Join WillGive</button>
     </form>
     <div class="col-xs-2 text-center">
         &nbsp;<span style="vertical-align:-50px;"><h1>or</h1></span>
