--- a/views/charity/searchCharities.ejs
+++ b/views/charity/searchCharities.ejs
@@ -15,11 +15,11 @@
 <body>
 <% if(undefined == typeof keyword || !keyword) {keyword=""}%>
 
-<div class="container sidebar-content" style="height:auto; min-height: 90%; padding-top: 7%">
+<div class="container sidebar-content" style="height:auto; min-height: 90%; padding-top: 7%; ">
     <div class="row row-offcanvas row-offcanvas-left">
 
         <!-- sidebar -->
-        <div class="col-xs-5 col-sm-3 sidebar-offcanvas"   id="sidebar" role="navigation"  >
+        <div class="col-xs-5 col-sm-3 sidebar-offcanvas"  id="sidebar" role="navigation"  >
             <div data-spy="affix" data-offset-top="15" data-offset-bottom="30">
                 <ul class="nav" style="color: #000000;" id="sidebar-nav">
                     <li class="sidebar-offcanvas" style="font-style: italic; font-size: 40px; padding-bottom: 10%" >
@@ -41,7 +41,7 @@
             <div id="page" class="input-group" style="width:70%;" >
                     <input type="text" class="form-control" placeholder="Search" name="keyword" id="keyword" value="<%=keyword%>" required autofocus>
                     <div class="input-group-btn">
-                        <button class="btn btn-default" id="Search" type="button" style="background-color:#ffb900;"><i class="glyphicon glyphicon-search"></i></button>
+                        <button class="btn btn-default" id="Search" type="button" style="background-color:#78DC96;"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
 			</div>
 			</form>
