--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -30,6 +30,8 @@
         color: #99CC01
     }
 </style>
+    <link rel="stylesheet" href="/assets/css/colorStyle.css">
+
     <div class="container-fluid" style="background: #ffffff">
 
         <div class="container">
@@ -98,9 +100,9 @@
              <li>
                  <form class="nav navbar-nav navbar-form " action="/charities/searchCharities" method="get" role="search">
                      <div class="input-group">
-                         <input type="text" class="form-control" placeholder="Search Charities" name="keyword" id="narbarKeyword">
+                         <input type="text" class="form-control greenBorder" placeholder="Search Charities" name="keyword" id="narbarKeyword">
                          <div class="input-group-btn">
-                             <button class="btn btn-default" type="submit" style="background-color:#ffb900;"><i class="glyphicon glyphicon-search"></i></button>
+                             <button class="btn btn-default greenButton" type="submit" ><i class="glyphicon glyphicon-search"></i></button>
                          </div>
                      </div>
                  </form>
@@ -116,7 +118,7 @@
             </ul>
             <% } else if( 'recipient' != user.provider ){ %>
             <ul class="nav navbar-nav navbar-right"  style="padding-right:15px;padding-top: 0px ! important">
-                <li ><a href="/charities/listCharities" style="padding-top:15px; color:black;">Charities</a></li>
+                <li ><a href="/charities/listCharities" style="padding-top:15px; color:black;">Browse</a></li>
                 <li class="dropdown">
                     <a href="" data-toggle="dropdown" class="dropdown-toggle">
                         <img src="<%=user.imageIconUrl%>" height="25" width="25"/>
