--- a/views/login/signin.ejs
+++ b/views/login/signin.ejs
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/assets/css/social-buttons.css">
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
+    <link rel="stylesheet" href="/assets/css/colorStyle.css">
+
 </head>
-<body>
+<body style="background: #f0f0f0;">
     <%activeMenu = "SignIn"%>
     <%include ../layout/navbar.ejs%>
-<div class="container" style="height:auto; min-height: 90%; margin: 0 auto -80px; padding-top: 5%">
-    <h2 class="form-signin-heading text-center">WillGive Sign In</h2>
+<div class="container" style="background: #ffffff; height:auto; min-height: 90%; margin: 0 auto -80px; padding-top: 5%">
+    <h2 class="form-signin-heading text-center " style="font-family : Nevis">WillGive Login</h2>
     <hr align="left" width="100%" background="0xff0000">
     <form id="userSignInForm" class="form-signin col-xs-4 col-xs-offset-1" action="/services/login/signin" method="post" style="padding-top: 10px">
         <div id="signInReporter" style="padding-bottom: 2%"></div>
@@ -20,25 +22,25 @@
           <div class="text-center alert" style="color: red; font-size: small; font-style: italic; padding-bottom: 1% "> <%= error %> </div>
         <% } %>
         <div class="input-group input-group-lg">
-          <span class="input-group-addon">
+          <span class="input-group-addon greenBorder">
             <span class="glyphicon glyphicon-envelope"></span>
           </span>
             <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" name="username" class="form-control" placeholder="Email address" required autofocus>
+            <input type="email" id="inputEmail" name="username" class="greenBorder form-control" placeholder="Email address" required autofocus>
         </div>
         <div style="padding-top: 2px"> &nbsp</div>
 
         <div class="input-group input-group-lg">
-              <span class="input-group-addon">
+              <span class="input-group-addon greenBorder">
                 <span class="glyphicon glyphicon-lock"></span>
               </span>
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" minlength="8" required>
+            <input type="password" id="inputPassword" name="password" class="greenBorder form-control" placeholder="Password" minlength="8" required>
         </div>
 
 
         <div style="padding-bottom: 20px">&nbsp</div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" >SIGN IN</button>
+        <button class="btn btn-lg btn-primary btn-block greenButton" type="submit" >SIGN IN</button>
 
         <ul class="text-center" style="padding-top: 20px; padding-right: 40px">
              <a class="link" href="/login/forgotPassword">Forgot your password?</a>
@@ -48,7 +50,7 @@
         &nbsp;<span style="vertical-align:-50px;"><h1>or</h1></span>
     </div>
     <div class="col-xs-5" style="padding-top: 50px; padding-bottom: 100px;">
-        <a href="/auth/facebook" ><button class="btn btn-lg btn-facebook"><i class="fa fa-facebook"></i>f | Sign in with Facebook</button></a>
+        <a href="/auth/facebook" ><button class="btn btn-lg btn-facebook"><i class="fa fa-facebook "></i>f | Sign in with Facebook</button></a>
 		<P>
         <ul class="secondary note nobullet">
             <li style="font-size:10px;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> Privacy:</span> we keep it private</li>
