--- a/views/login/userProfile.ejs
+++ b/views/login/userProfile.ejs
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
     <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
+    <link rel="stylesheet" href="/assets/css/colorStyle.css" >
+
 </head>
 <body>
     <%activeMenu = "SignUp"%>
@@ -79,7 +81,7 @@
                         <input type="file" id="myProfileIconInput" name="profilePicture_<%=user.userId%>" accept="image/*"  required="true">
                         <div style="float: left">File size max 200K</div>
                         <div class="col-xs-4" style="padding-top: 1%;padding-bottom: 2%; float: left">
-                            <button id="uploadProfilePictureButton" class="btn-sm btn-primary btn-block" type="submit" >Upload</button>
+                            <button id="uploadProfilePictureButton" class="btn-sm btn-primary btn-block greenButton" type="submit" >Upload</button>
                         </div>
                     </form>
 
@@ -97,33 +99,33 @@
                         <div class="form-group" style="padding-bottom: 1%">
                             <label class="control-label col-xs-4" for="email">Email:</label>
                             <div class="input-group col-xs-6"  >
-                                <span class="input-group-addon">
+                                <span class="input-group-addon greenBorder">
                                     <span class="glyphicon glyphicon-envelope"></span>
                                 </span>
-                                <input type="text" id="email" name="email" class="form-control" placeholder="<%=user.email%>" readonly>
+                                <input type="text" id="email" name="email" class="greenBorder form-control" placeholder="<%=user.email%>" readonly>
                             </div>
                         </div>
 
                         <div class="form-group" style="padding-bottom: 1%">
                             <label class="control-label col-xs-4" for="firstName">First Name:</label>
                             <div class="input-group col-xs-6"  >
-                                <span class="input-group-addon">
+                                <span class="input-group-addon greenBorder">
                                     <span class="glyphicon glyphicon-user"></span>
                                 </span>
-                                <input type="text" id="firstName" name="firstName" class="form-control" placeholder="<%=user.firstName%>" required>
+                                <input type="text" id="firstName" name="firstName" class="greenBorder form-control" placeholder="<%=user.firstName%>" required>
                             </div>
                         </div>
                         <div class="form-group" style="padding-bottom: 1%">
                             <label class="control-label col-xs-4" for="lastName">Last Name:</label>
                             <div class="input-group col-xs-6"  >
-                                <span class="input-group-addon">
+                                <span class="input-group-addon greenBorder">
                                     <span class="glyphicon glyphicon-user"></span>
                                 </span>
-                                <input type="text" id="lastName" name="lastName" class="form-control" placeholder="<%=user.lastName%>" required>
+                                <input type="text" id="lastName" name="lastName" class="form-control greenBorder" placeholder="<%=user.lastName%>" required>
                             </div>
                         </div>
                         <div class="col-xs-4" style="padding-top: 1%;padding-bottom: 2%; float: left">
-                            <button id="submitUpdateBasicInfoButton" class="btn btn-primary btn-block" type="submit" >Update</button>
+                            <button id="submitUpdateBasicInfoButton" class="btn btn-primary btn-block greenButton" type="submit" >Update</button>
                         </div>
                     </form>
                 </div>
@@ -150,35 +152,35 @@
                     <div class="form-group" style="padding-bottom: 1%">
                         <label class="control-label col-xs-4" for="oldPassword">Old Password:</label>
                         <div class="input-group col-xs-6" >
-                                <span class="input-group-addon">
+                                <span class="input-group-addon greenBorder">
                                     <span class="glyphicon glyphicon-lock"></span>
                                 </span>
-                            <input type="password" id="oldPassword" name="oldPassword" class="form-control" placeholder="Old Password" minlength="8" required>
+                            <input type="password" id="oldPassword" name="oldPassword" class="greenBorder form-control" placeholder="Old Password" minlength="8" required>
                         </div>
                     </div>
                     <div class="form-group" style="padding-bottom: 1%">
                         <label class="control-label col-xs-4" for="newPassword">New Password:</label>
 
                         <div class="input-group col-xs-6">
-                                <span class="input-group-addon">
+                                <span class="input-group-addon greenBorder">
                                     <span class="glyphicon glyphicon-lock"></span>
                                 </span>
-                            <input type="password" id="newPassword" name="newPassword" class="form-control" placeholder="New Password" minlength="8" required>
+                            <input type="password" id="newPassword" name="newPassword" class="greenBorder form-control" placeholder="New Password" minlength="8" required>
                         </div>
                     </div>
                     <div class="form-group" style="padding-bottom: 1%">
                         <label class="control-label col-xs-4" for="confirmPassword">Confirm Password:</label>
 
                         <div class="input-group col-xs-6">
-                                <span class="input-group-addon">
+                                <span class="input-group-addon greenBorder">
                                     <span class="glyphicon glyphicon-lock"></span>
                                 </span>
                             <label for="confirmPassword" class="sr-only">Confirm Password</label>
-                            <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="Confirm Password" equalTo="#newPassword" minlength="8" required>
+                            <input type="password" id="confirmPassword" name="confirmPassword" class="greenBorder form-control" placeholder="Confirm Password" equalTo="#newPassword" minlength="8" required>
                         </div>
                     </div>
                     <div class="col-xs-4" style="padding-top: 1%; padding-bottom: 2%;float: left">
-                        <button id="submitUpdateProfilePasswordButton" class="btn btn-primary btn-block" type="submit" >Change Password</button>
+                        <button id="submitUpdateProfilePasswordButton" class="btn btn-primary btn-block greenButton" type="submit" >Change Password</button>
                     </div>
                 </form>
             </div>
@@ -204,25 +206,25 @@
                         <div class="form-group" style="padding-bottom: 1%">
                             <label class="control-label col-xs-4" for="email">New Email: </label>
                             <div class="input-group col-xs-6"  >
-                                <span class="input-group-addon">
+                                <span class="input-group-addon greenBorder">
                                     <span class="glyphicon glyphicon-envelope"></span>
                                 </span>
-                                <input type="text" id="newEmail" name="newEmail" class="form-control" placeholder="New Email">
+                                <input type="text" id="newEmail" name="newEmail" class="greenBorder form-control" placeholder="New Email">
                             </div>
                         </div>
                         <div class="form-group" style="padding-bottom: 1%">
                             <label class="control-label col-xs-4" for="updateEmailPassword">Password: </label>
 
                             <div class="input-group col-xs-6">
-                                <span class="input-group-addon">
+                                <span class="input-group-addon greenBorder">
                                     <span class="glyphicon glyphicon-lock"></span>
                                 </span>
                                 <label for="updateEmailPassword" class="sr-only">Enter your password</label>
-                                <input type="password" id="updateEmailPassword" name="updateEmailPassword" class="form-control" placeholder="Enter your password" minlength="8" required>
+                                <input type="password" id="updateEmailPassword" name="updateEmailPassword" class="greenBorder form-control" placeholder="Enter your password" minlength="8" required>
                             </div>
                         </div>
                         <div class="col-xs-4" style="padding-top: 1%; padding-bottom: 2%;float: left">
-                            <button id="submitUpdateProfileEmailButton" class="btn btn-primary btn-block" type="submit" >Update Email</button>
+                            <button id="submitUpdateProfileEmailButton" class="btn btn-primary btn-block greenButton" type="submit" >Update Email</button>
                         </div>
                     </form>
                 </div>
