--- a/views/login/userSettings.ejs
+++ b/views/login/userSettings.ejs
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
     <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
+    <link rel="stylesheet" href="/assets/css/colorStyle.css" >
+
 </head>
 <body>
     <%activeMenu = "SignUp"%>
@@ -76,28 +78,28 @@
                 <div class="form-group" style="padding-bottom: 1%">
                     <label class="control-label col-xs-4" for="defaultAmountPerTime">Default Amount Per Time:</label>
                     <div class="input-group col-xs-5"  >
-                                <span class="input-group-addon">
+                                <span class="input-group-addon greenBorder">
                                     <span class="glyphicon glyphicon-usd"></span>
                                 </span>
-                        <input type="number" id="defaultAmountPerTime" name="defaultAmountPerTime" class="form-control" placeholder="">
+                        <input type="number" id="defaultAmountPerTime" name="defaultAmountPerTime" class="greenBorder form-control" placeholder="">
                     </div>
                 </div>
                 <div class="form-group" style="padding-bottom: 1%">
                     <label class="control-label col-xs-4" for="maxAmountPerTime">Max Amount Per Time:</label>
                     <div class="input-group col-xs-5"  >
-                                <span class="input-group-addon">
+                                <span class="input-group-addon greenBorder">
                                     <span class="glyphicon glyphicon-usd"></span>
                                 </span>
-                        <input type="number" id="maxAmountPerTime" name="maxAmountPerTime" class="form-control" placeholder="">
+                        <input type="number" id="maxAmountPerTime" name="maxAmountPerTime" class="greenBorder form-control" placeholder="">
                     </div>
                 </div>
                 <div class="form-group" style="padding-bottom: 1%">
                     <label class="control-label col-xs-4" for="maxAmountDaily">Max Amount Daily:</label>
                     <div class="input-group col-xs-5"  >
-                                <span class="input-group-addon">
+                                <span class="input-group-addon greenBorder">
                                     <span class="glyphicon glyphicon-usd"></span>
                                 </span>
-                        <input type="number" id="maxAmountDaily" name="maxAmountDaily" class="form-control" placeholder="">
+                        <input type="number" id="maxAmountDaily" name="maxAmountDaily" class="greenBorder form-control" placeholder="">
                     </div>
                 </div>
 
@@ -124,7 +126,7 @@
                 </div>
                 </hr>
                 <div class="col-xs-6" style="padding-top: 1%; padding-bottom: 2%;float: left">
-                    <button id="submitUpdateProfilePasswordButton" class="btn btn-primary btn-block" type="submit" >Save All Setting</button>
+                    <button id="submitUpdateProfilePasswordButton" class="btn btn-primary btn-block greenButton" type="submit" >Save All Setting</button>
                 </div>
             </form>
         </div><!-- /.col-xs-12 main -->
