--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -215,14 +215,14 @@
                                         <label class="control-label col-xs-4" for="paymentAmount" >Amount($):
                                         </label>
                                         <div class="input-group col-xs-7"  >
-                                            <input type="text" id="paymentAmount"  name="paymentAmount" class="form-control" placeholder="Amount" required>
+                                            <input type="text" id="paymentAmount"  name="paymentAmount" class="greenBorder form-control" placeholder="Amount" required>
                                         </div>
                                     </div>
                                     <div class="form-group" >
                                         <label class="control-label col-xs-4" for="paymentNotes" >Note:
                                         </label>
                                         <div class="input-group col-xs-7"  >
-                                            <textarea id="paymentNotes" name="paymentNotes" class="form-control" maxlength="1000" rows="3" placeholder="Notes" style="height:auto; resize:none">
+                                            <textarea id="paymentNotes" name="paymentNotes" class="greenBorder form-control" maxlength="1000" rows="3" placeholder="Notes" style="height:auto; resize:none">
                                             </textarea>
 
                                         </div>
@@ -253,9 +253,9 @@
                                     </div>
 
                                 </div>
-                                <div class="modal-footer">
+                                <div class="modal-footer" style="background: #f0f0f0">
                                     <button id="cancalModal" type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                    <button id="confirm" type="button" class="btn btn-primary">Pay</button>
+                                    <button id="confirm" type="button" class="btn btn-primary greenButton">Confirm</button>
                                 </div>
                             </form>
                         </div>
