--- a/views/charity/searchCharities.ejs
+++ b/views/charity/searchCharities.ejs
@@ -39,9 +39,9 @@
         <div class="col-xs-14 col-sm-9" data-spy="scroll" style="padding-left: 3%;" data-target="#sidebar-nav">
             <form method="get" role="search">
             <div id="page" class="input-group" style="width:70%;" >
-                    <input type="text" class="form-control" placeholder="Search" name="keyword" id="keyword" value="<%=keyword%>" required autofocus>
+                    <input type="text" class="form-control greenBorder" placeholder="Search" name="keyword" id="keyword" value="<%=keyword%>" required autofocus>
                     <div class="input-group-btn">
-                        <button class="btn btn-default" id="Search" type="button" style="background-color:#78DC96;"><i class="glyphicon glyphicon-search"></i></button>
+                        <button class="btn btn-default greenButton" id="Search" type="button"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
 			</div>
 			</form>
