--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -128,14 +128,15 @@
                 <!-- left text-->
                 <div id="introduction">
 
-                    <hr/>
+                    <hr class="greenLine">
+
                     <h3>
                         Missions
                     </h3>
 
                     <p id="mission_content">  </p>
 
-                    <hr/>
+                    <hr class="greenLine">
 
                     <h3>
                         Information
@@ -169,7 +170,7 @@
                             <div class="col-xs-4" id="faxInfo"></div>
                         </div>
                     </div>
-                    <hr/>
+                    <hr class="greenLine">
 
                     <h3>
                         Map and Reviews
@@ -267,7 +268,7 @@
                 <button style="font-size: 24px" type="contribute_button" onClick="checkExistingPaymentMethod()" class="btn btn-block btn-primary btn-lg greenButton" data-toggle="modal" data-target="#myModal">
                     CONTRIBUTE
                 </button>
-                <hr/>
+                <hr class="greenLine">
 
                 <!-- Modal -->
               <!-- progress bar-->
@@ -281,7 +282,8 @@
                     <div id="botPage" style="float: left"></div>
 
                 </div>
-                <hr/>
+                <br>
+                <hr class="greenLine">
                 <div id="img_slides" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="item active">
