--- a/views/login/signin.ejs
+++ b/views/login/signin.ejs
@@ -15,7 +15,7 @@
     <%include ../layout/navbar.ejs%>
 <div class="container" style="background: #ffffff; height:auto; min-height: 90%; margin: 0 auto -80px; padding-top: 5%">
     <h2 class="form-signin-heading text-center " style="font-family : Nevis">WillGive Login</h2>
-    <hr align="left" width="100%" background="0xff0000">
+    <hr class="greenLine" >
     <form id="userSignInForm" class="form-signin col-xs-4 col-xs-offset-1" action="/services/login/signin" method="post" style="padding-top: 10px">
         <div id="signInReporter" style="padding-bottom: 2%"></div>
         <% if (error) { %>
