--- a/views/login/signup.ejs
+++ b/views/login/signup.ejs
@@ -16,7 +16,7 @@
     <%include ../layout/navbar.ejs%>
 <div class="container" style="min-height: 70%; padding-top: 5%">
     <h2 class="form-signin-heading text-center">Join WillGive</h2>
-    <hr align="left" width="100%" background="0xff0000">
+    <hr class="greenLine">
     <form id="userSignupForm" class="form-signin col-xs-4 col-xs-offset-1"  method="post" style="padding-top: 2%">
         <div id="signUpReporter" style="padding-bottom: 2%"></div>
         <div class="row form-group-lg">
