--- a/views/login/userContribution.ejs
+++ b/views/login/userContribution.ejs
@@ -51,7 +51,7 @@
             <div id="resultsContainer" class="">
 
                 <div class="table-responsive">
-                    <table id="transactionHistoryTable" class="table table-striped">
+                    <table id="transactionHistoryTable" class="table table-striped greenBorder">
                         <thead>
                         <tr>
                             <th>Confirmation #</th>
