--- a/views/login/userProfile.ejs
+++ b/views/login/userProfile.ejs
@@ -32,7 +32,7 @@
     }
 
 </script>
-<div class="container sidebar-content" style="height:auto; min-height: 90%; padding-top: 5%">
+<div class="container sidebar-content" style="height:auto; min-height: 90%; padding-top: 7%">
     <div class="row row-offcanvas row-offcanvas-left">
 
         <!-- sidebar -->
@@ -87,7 +87,8 @@
 
                 </div>
             </div>
-            <hr/>
+            <hr class="greenLine">
+
             <div class="row">
                 <h3 class="col-xs-3 col-xs-height col-top" style="margin-top: 0px; padding-bottom: 3%;"  id="profileBasicInfo">Basic Info</h3>
                 <div class="col-xs-9 col-xs-height col-top" style="padding-bottom: 1%">
@@ -131,7 +132,7 @@
                 </div>
 
             </div>
-            <hr/>
+            <hr class="greenLine">
             <div class="row">
             <h3 class="col-xs-3 col-xs-height col-top" style="margin-top: 0px;padding-bottom: 3%;"  id="profilePassword">Password</h3>
             <div class="col-xs-9 col-xs-height col-top" style="margin-top: 0px;">
@@ -185,7 +186,7 @@
                 </form>
             </div>
         </div>
-            <hr/>
+            <hr class="greenLine">
             <div class="row">
                 <h3 class="col-xs-3 col-xs-height col-top" style="margin-top: 0px;padding-bottom: 3%;"  id="profileEmail">Email</h3>
                 <div class="col-xs-9 col-xs-height col-top" style="margin-top: 0px;">
@@ -229,7 +230,6 @@
                     </form>
                 </div>
             </div>
-            <hr/>
         </div><!-- /.col-xs-12 main -->
     </div><!--/.row-->
 </div><!--/.container-->
