--- a/views/login/userSettings.ejs
+++ b/views/login/userSettings.ejs
@@ -54,7 +54,6 @@
                     <h3 style="margin-top: 0px; float: left;color: red">Updating user settings failed. Please try again.</h3>
                 </div>
                 <h3 id="emailNotification">Email Settings</h3>
-                <hr/>
                 <div class="input-group col-xs-6">
                     <label class="checkbox-inline"><input id="receiveEmailUpdate" type="checkbox" value="" checked>
                         Receive Email Updates From WillGive
@@ -66,14 +65,16 @@
                     </label>
                 </div>
 
-                <hr/>
+                <hr class="greenLine">
                 <h3 id="privacySettings">Privacy Settings</h3>
                 <div class="input-group col-xs-6">
                     <label class="checkbox-inline"><input id="allowContributionPublic" type="checkbox" value="" checked>
                         Allow Contributions Public
                     </label>
                 </div>
-                <hr/>
+
+                <hr class="greenLine">
+
                 <h3 id="paymentOptions">Payment Options Settings</h3>
                 <div class="form-group" style="padding-bottom: 1%">
                     <label class="control-label col-xs-4" for="defaultAmountPerTime">Default Amount Per Time:</label>
@@ -102,6 +103,7 @@
                         <input type="number" id="maxAmountDaily" name="maxAmountDaily" class="greenBorder form-control" placeholder="">
                     </div>
                 </div>
+                <hr class="greenLine">
 
                 <h3 id="paymentMethod">Payment Method</h3>
                 <div id="noPaymentMethod" style="display: none">
@@ -124,7 +126,6 @@
                         </div>
                     </div>
                 </div>
-                </hr>
                 <div class="col-xs-6" style="padding-top: 1%; padding-bottom: 2%;float: left">
                     <button id="submitUpdateProfilePasswordButton" class="btn btn-primary btn-block greenButton" type="submit" >Save All Setting</button>
                 </div>
